--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,6 @@ target/
 # End of https://www.gitignore.io/api/java,eclipse,intellij,java-web
 
 .txlcn/
+
+release.properties
+pom.xml.releaseBackup
